; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/sys/extr_brk.c_mvbrk.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/sys/extr_brk.c_mvbrk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@minbrk = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@curbrk = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @mvbrk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mvbrk(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = ptrtoint i8* %5 to i64
  %7 = load i64, i64* @minbrk, align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @EINVAL, align 4
  store i32 %10, i32* @errno, align 4
  store i8* inttoptr (i64 -1 to i8*), i8** %2, align 8
  br label %22

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @__sys_break(i8* %12)
  %14 = icmp eq i8* %13, inttoptr (i64 -1 to i8*)
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i8* inttoptr (i64 -1 to i8*), i8** %2, align 8
  br label %22

16:                                               ; preds = %11
  %17 = load i64, i64* @curbrk, align 8
  store i64 %17, i64* %4, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = ptrtoint i8* %18 to i64
  store i64 %19, i64* @curbrk, align 8
  %20 = load i64, i64* %4, align 8
  %21 = inttoptr i64 %20 to i8*
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %16, %15, %9
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i8* @__sys_break(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
